--- a/style.css
+++ b/style.css
@@ -4,11 +4,13 @@ body {
   width: 100%
 }
 
-button{
+input{
     background: #DB3030;
     border: none;
     border-radius: 5px;
     padding: 10px 10px 10px 10px;
+    font-family: 'Roboto';
+    color: white;
   }
 
 .box{
@@ -27,11 +29,13 @@ color: white;
 }
 
 @media screen and (max-width: 700px) {
-button{
+input{
     background:#DB3030;
     border: none;
     border-radius: 5px;
     padding: 10px 10px 10px 10px;
+    font-family: 'Roboto';
+    color: white;
   }
 .box{
  margin: 150px 50px 50px 50px;
