--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   width: 100%
 }
 
-input{
+button{
     background: #DB3030;
     border: none;
     border-radius: 5px;
@@ -29,7 +29,7 @@ color: white;
 }
 
 @media screen and (max-width: 700px) {
-input{
+button{
     background:#DB3030;
     border: none;
     border-radius: 5px;
